--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
     <!--change your title of the whole page here !-->
-    <title>Monastery of St. Blamensir</title>
+    <title>Monastery of rizz</title>
     <link href="omni.css" rel="stylesheet" type="text/css" media="all">
 
     <style>
